# black_glove_agent

./: .coverage  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  STARTUP_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  collection_output.txt  config.yaml  failure_detail.txt  fm_intel.md  implementation_plan.md  manual_verify.py  pyproject.toml  skills.md  test_adapters_manual.py  test_chat_logic.py  test_debug.txt  test_failure.txt  test_output.txt  test_report.md  test_results.txt  test_results_2.txt  test_results_debug.txt  test_results_final.txt  test_results_final_2.txt  verification_report.txt  verification_report_final.txt  verify_sqli_scanner.py  verify_web_vuln_scanner.py
config/: default_config.yaml
debug/: live_tests.py
docker/: Dockerfile.agent  docker-compose.yml
docs/: AGENTS.md  ARCHITECTURE.md  E2E_TEST_PLAN.md  FOSS_reconnaissance_research.md  SECURITY.md  TESTING.md  current_implementation_tasks.md  network_infra_audit.md  operational_audit.md  project_requirements_plan.md  project_tasks.md  review_findings.md  skills.md  specialized_intel_audit.md  uat_cli_audit.md  uat_plan.md  uat_report.md  web_tools_audit.md  webapp.md
examples/: assets.yml  core_architecture_demo.py  llm_enhanced_demo.py  workflows.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: Launch-BlackGlove-Web.ps1  demo_recon_fix.py  deploy.bat  deploy.sh  inspect_agent_events.py  launch-web.bat  quick-start.bat  quick-start.sh  run_e2e_test.py  setup_tools.py  update_user_config.py
src/: __init__.py
tests/: TEST_UPDATES_NEEDED.md  debug_osint_interpretation.py  debug_sublist3r.py  manual_test_report.py  test_adapter_wrapper.py  test_adapters.py  test_agents_integration.py  test_all_adapters.py  test_asset_management.py  test_asset_manager_adapter.py  test_asset_validator.py  test_bootstrap.py  test_camera_manual.py  test_camera_orchestrator.py  test_camera_security_adapter.py  test_camera_security_interpret.py  test_cli_chat_refactored.py  test_cli_commands.py  test_cli_enhancements.py  test_cli_usability.py  test_cli_ux_scenarios.py  test_command_handlers_report.py  test_command_parser.py  test_config_service.py  test_config_setup.py  test_context_memory.py  test_core_functionality.py  test_credential_tester_adapter.py  test_db_init.py  test_deployment.py  test_dns_lookup_adapter.py  test_dns_recon_adapter.py  test_docker_runner.py  test_encoding_scan_findings.py  test_executor_async.py  test_finding_observations.py  test_findings_conflict_reconciliation.py  test_findings_normalizer_network_infra.py  test_findings_normalizer_specialized_intel.py  (+64 more)
(+118 files in other folders)
